Assert for order of get beers methods